-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0 Beta
-
None
-
d743e5a7583f242142bcab3ce927490228c5df29
To reproduce:
1) Create new form
2) Add a pushbutton to the form
3) Close designer, click "close without saving" - crash.
Call stack:
1 QListData::size qlist.h 113 0x426898
2 QList<QDesignerFormWindow *>::count qlist.h 342 0x44551c
3 QDesignerWorkbench::formWindowCount qdesigner_workbench.cpp 556 0x44161c
4 QDesignerFormWindow::getNumberOfUntitledWindows qdesigner_formwindow.cpp 158 0x43d37b
5 QDesignerFormWindow::updateWindowTitle qdesigner_formwindow.cpp 197 0x43d6a9
6 QDesignerFormWindow::updateChanged qdesigner_formwindow.cpp 247 0x43dc9b
7 QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (QDesignerFormWindow:: *)()>::call(void (QDesignerFormWindow:: *)(), QDesignerFormWindow *, void * *) qobjectdefs_impl.h 143 0x43e8df
8 QtPrivate::FunctionPointer<void (QDesignerFormWindow:: *)()>::call<QtPrivate::List<>, void>(void (QDesignerFormWindow:: *)(), QDesignerFormWindow *, void * *) qobjectdefs_impl.h 162 0x43e82c
9 QtPrivate::QSlotObject<void (QDesignerFormWindow:: *)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase *, QObject *, void * *, bool *) qobject_impl.h 120 0x43e6b2
10 QtPrivate::QSlotObjectBase::call qobject_impl.h 101 0x7ffff5faab23
11 QMetaObject::activate qobject.cpp 3723 0x7ffff5fa7a25
12 QMetaObject::activate qobject.cpp 3602 0x7ffff5fa7344
13 QUndoStack::indexChanged moc_qundostack.cpp 267 0x7ffff71d1cc0
14 QUndoStack::clear qundostack.cpp 547 0x7ffff71d01ac
15 QUndoStack::~QUndoStack qundostack.cpp 515 0x7ffff71d00d0
16 qdesigner_internal::FormWindow::~FormWindow formwindow.cpp 314 0x7ffff7c01b59
17 qdesigner_internal::FormWindow::~FormWindow formwindow.cpp 332 0x7ffff7c01bc2
18 qDeleteAll<QList<qdesigner_internal::FormWindow *>::const_iterator> qalgorithms.h 317 0x7ffff7c25caa
19 qDeleteAll<QList<qdesigner_internal::FormWindow *>> qalgorithms.h 325 0x7ffff7c24d20
20 qdesigner_internal::FormWindowManager::~FormWindowManager formwindowmanager.cpp 118 0x7ffff7c1ddbe
21 qdesigner_internal::FormWindowManager::~FormWindowManager formwindowmanager.cpp 119 0x7ffff7c1ddf6
22 QDesignerFormEditorInterfacePrivate::~QDesignerFormEditorInterfacePrivate abstractformeditor.cpp 116 0x7ffff74fc8d3
23 QScopedPointerDeleter<QDesignerFormEditorInterfacePrivate>::cleanup qscopedpointer.h 60 0x7ffff74fe0d9
24 QScopedPointer<QDesignerFormEditorInterfacePrivate, QScopedPointerDeleter<QDesignerFormEditorInterfacePrivate>>::~QScopedPointer qscopedpointer.h 107 0x7ffff74fda1d
25 QDesignerFormEditorInterface::~QDesignerFormEditorInterface abstractformeditor.cpp 181 0x7ffff74fcb2e
26 qdesigner_internal::FormEditor::~FormEditor formeditor.cpp 150 0x7ffff7c27854
27 qdesigner_internal::FormEditor::~FormEditor formeditor.cpp 152 0x7ffff7c27870
28 QObjectPrivate::deleteChildren qobject.cpp 1970 0x7ffff5fa2710
29 QObject::~QObject qobject.cpp 1041 0x7ffff5fa0d2d
30 QDesignerWorkbench::~QDesignerWorkbench qdesigner_workbench.cpp 252 0x43fb50
31 QDesignerWorkbench::~QDesignerWorkbench qdesigner_workbench.cpp 263 0x43fb6c
32 QDesigner::~QDesigner qdesigner.cpp 94 0x43797d
33 main main.cpp 41 0x4375ff
- is duplicated by
-
QTBUG-57269 [5.8.0 RC] QtDesigner crashes at close up
-
- Closed
-
| For Gerrit Dashboard: QTBUG-57201 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 177167,4 | Fix a crash on Designer exit | 5.8 | qt/qttools | Status: MERGED | +2 | 0 |